# termxt

./: .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml  requirements.txt
src/termxt/: termxt.py
